tests/snapshots/snapshots__pipeline@redundant.pr.snap
---
source: tests/snapshots.rs
expression: "tiny_prism::report(&src)"
input_file: tests/cases/redundant.pr
---
== tokens ==
VOpen Type UIdent("Color") Eq UIdent("Red") Bar UIdent("Green") Bar UIdent("Blue") VSemi Fn Ident("name") LParen Ident("c") RParen Eq VOpen Match Ident("c") Of VOpen UIdent("Red") FatArrow Int(IntLit { value: 1, suffix: None }) VSemi Ident("_") FatArrow Int(IntLit { value: 0, suffix: None }) VSemi UIdent("Blue") FatArrow Int(IntLit { value: 3, suffix: None }) VClose VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("name") LParen UIdent("Blue") RParen RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Color",
            params: [],
            ctors: [
                Ctor {
                    name: "Red",
                    args: [],
                    fields: None,
                },
                Ctor {
                    name: "Green",
                    args: [],
                    fields: None,
                },
                Ctor {
                    name: "Blue",
                    args: [],
                    fields: None,
                },
            ],
            deriving: [],
            newtype: false,
            span: 0..31,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "name",
            params: [
                Param {
                    name: "c",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "c",
                        ),
                        span: 54..55,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Red",
                                    [],
                                ),
                                span: 63..66,
                            },
                            body: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 1,
                                        suffix: None,
                                    },
                                ),
                                span: 70..71,
                            },
                        },
                        Arm {
                            pat: Spanned {
                                node: Wild,
                                span: 76..77,
                            },
                            body: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 0,
                                        suffix: None,
                                    },
                                ),
                                span: 81..82,
                            },
                        },
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Blue",
                                    [],
                                ),
                                span: 87..91,
                            },
                            body: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 3,
                                        suffix: None,
                                    },
                                ),
                                span: 95..96,
                            },
                        },
                    ],
                ),
                span: 48..96,
            },
            wheres: [],
            span: 33..96,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 110..117,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "name",
                                    ),
                                    span: 118..122,
                                },
                                [
                                    Spanned {
                                        node: Var(
                                            "Blue",
                                        ),
                                        span: 123..127,
                                    },
                                ],
                            ),
                            span: 118..128,
                        },
                    ],
                ),
                span: 110..129,
            },
            wheres: [],
            span: 98..129,
        },
    ],
}

== types ==
Type Error: in `name`: unreachable match arm
   ╭─[ <source>:7:5 ]
   │
 7 │     Blue => 3
   │     ──┬─  
   │       ╰─── in `name`: unreachable match arm
───╯
